# Spatio-temporal-network-PP-for-Crime-Modeling-in-Valencia

./: README.md  pyproject.toml
examples/: config_example.yaml
stnpp/: __init__.py  cli.py  data.py
stnpp/models/: base.py  kernels.py  stnpp.py
stnpp/train/: __init__.py  loops.py
tests/: test_data.py
